--- a/eventos/templates/inscrever_evento.html
+++ b/eventos/templates/inscrever_evento.html
@@ -7,6 +7,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3">
+                
             
                 <img width="100%" src="{{evento.logo.url}}">
                 <br>
@@ -14,13 +15,28 @@
                 <h3>{{evento.nome}}</h3>
             </div>
             <hr>
+            
 
             <div class="col-md-6">
                 <h5>{{evento.descricao}}</h5>
                 <br>
                 <p>{{evento.data_inicio}} a {{evento.data_termino}}</p>
+                
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert {{ message.tags }}">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
 
-                <a style="text-decoration: none;" class="btn-principal" href="#">QUERO PARTICIPAR</a>
+                {% if request.user in evento.participantes.all %}
+                    <input style="border-color: green;" type="submit" class="btn-principal" value="INSCRITO" disabled>
+                {% else%}
+                    <form action="{% url 'inscrever_evento' evento.id %}" method="POST">{% csrf_token %}
+                        <input type="submit" class="btn-principal" value="QUERO PARTICIPAR">
+                    </form>
+                {% endif %}
+                
+                </form>
             
             </div>
         </div>
